<resources>
    <!-- Placeholder strings -->
    <string name="placeholder_extra_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="placeholder_short">Lorem ipsum dolor sit amet</string>
    <string name="placeholder_extra_short">Lorem</string>

    <!-- Application strings -->
    <string name="app_name">Water</string>
    <string name="bio_auth_error">There was a problem while trying to authenticate using biometric. Please try again later.</string>
    <string name="dialog_enable_biometric_title">Use biometric?</string>
    <string name="dialog_enable_biometric_message">Do you want to use biometric to authorize access?</string>
    <string name="bio_auth_success">Successfully authenticated.</string>
    <string name="bio_auth_failed">Failed to authenticate yourself.</string>
    <string name="bio_auth_no_hardware">Your device has no available biometric hardware.</string>
    <string name="bio_prompt_title">Authenticate yourself</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="default_volume">Volume</string>
    <string name="add">Take a shot</string>
    <string name="default_goal">Goal</string>
    <string name="image_general_description">General Image Description</string>
    <string name="sex">SEX</string>
    <string name="sex_male">MALE</string>
    <string name="sex_female">FEMALE</string>
    <string name="no_score_message">HIT THAT BUTTON!!!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_settings">App Settings</string>
    <string name="app_settings_use_bio_auth">Use Biometric</string>
    <string name="app_settings_sync">Sync</string>
    <string name="game_settings">Game Settings</string>
    <string name="game_settings_container">Container</string>
    <string name="game_settings_default_container_summary">This container will be used every time you drink if you don\'t select container manually.</string>
    <string name="game_settings_default_volume_summary">The default volume if you don\'t manually specify in main screen.</string>
    <string name="game_settings_volume">Volume</string>
    <string name="container">Container</string>
    <string name="volume">Volume</string>
    <string name="setting_on">On</string>
    <string name="setting_off">Off</string>
    <string name="alert_message_missing_goal">Slow down, I don\'t think you want to drink forever. What is your goal?</string>
    <string name="got_it">Got it!</string>
    <string name="warning">Warning</string>
    <string name="alert_message_missing_container">You must select a default container.</string>
    <string name="alert_message_missing_volume">OK, looks good, but how about the volume of the container? Tell me the default volume.</string>
    <string name="your_name">Your Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="goal">Goal</string>
    <string name="goal_description">Your goal per day, in millimeter</string>
    <string name="volume_description">Default volume, in millimeter</string>
    <string name="container_description">Default water container</string>
    <string name="name_description">Your name must contain only alphabet characters and spaces</string>
    <string name="age_description">Age must be between 9 and 130</string>
    <string name="height_description">Height must be between 50cm and 260cm</string>
    <string name="weight_description">Weight must be between 20kg and 600kg</string>
    <string name="onboarding_setup_game_summary">Now, let\'s select a container and specify its volume then lastly, your goal per day</string>
    <string name="onboarding_setup_game_header">… and the game</string>
    <string name="onboarding_setup_profile_header">Let\'s setting up your profile …</string>
    <string name="onboarding_welcome_header">Welcome to Water</string>
    <string name="onboarding_welcome_swipe_summary">Swipe left to continue \>\>\>></string>
    <string name="sex_help_summary">We don\'t use sexual behaviour to determine sex. We are mentioning the different biological and physiological characteristics of males and females. That\'s why there are only MALE and FEMALE.</string>
    <string name="sex_help_title">Why only MALE and FEMALE?</string>
    <string name="container_selector_bottomsheet_title">Select one container</string>
    <string name="app_settings_sync_account">Google Account</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bio_prompt_subtitle">Use your biometric to access Water.</string>
    <string name="app_settings_session_time">Session Time</string>
</resources>