<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:transitionGroup="true"
    tools:background="?attr/colorPrimary"
    tools:context=".ui.onboarding.OnboardingSetupBattleSettingsFragment">

    <TextView
        android:id="@+id/tv_header"
        style="@style/ViewHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/_32sdp"
        android:text="@string/onboarding_setup_game_header" />

    <TextView
        android:id="@+id/tv_weapon_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/onboarding_setup_game_summary"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Clickable"
            android:id="@+id/tiet_container"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:hint="@string/container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_volume"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputLayout.TextInputEditText"
                android:id="@+id/tiet_volume"
                android:layout_width="match_parent"
                android:gravity="center"
                android:hint="@string/volume"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_goal"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputLayout.TextInputEditText"
                android:id="@+id/tiet_goal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:hint="@string/goal"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/done"
        app:icon="@drawable/ic_done" />

</LinearLayout>