<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/confirmation_dialog_inset"
    android:orientation="vertical"
    android:paddingStart="26dp"
    android:paddingTop="14dp"
    android:paddingBottom="8dp"
    android:paddingEnd="26dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tooltipText="@string/placeholder_medium" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="16sp"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder_long" />


    <TextView
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textAllCaps="false"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/placeholder_extra_short" />
</LinearLayout>