<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_dialog"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="15dp"
    android:paddingEnd="10dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="@string/placeholder_short" />

    <TextView
        android:id="@+id/bottom_sheet_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:text="@string/placeholder_extra_long" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bottom_sheet_btn_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/spacer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/placeholder_extra_short" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bottom_sheet_btn_right"
            app:layout_constraintStart_toEndOf="@id/bottom_sheet_btn_left"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bottom_sheet_btn_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spacer"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:text="@string/placeholder_extra_short" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>