<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.Water"
    android:transitionGroup="true"
    tools:background="@color/purpleLighter"
    tools:context=".ui.onboarding.OnboardingSetupBattleSettingsFragment">

    <TextView
        android:id="@+id/tv_header"
        style="@style/Theme.Water.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/_32sdp"
        android:text="... and the battle"
        android:textAllCaps="true"
        android:textSize="@dimen/_32sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_weapon_summary"
        style="@style/Theme.Water.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="Now, let's select a weapon, the damage(volume) of the weapon and your goal per day"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_weapon"
            style="@style/Theme.Water.DropdownInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            app:endIconDrawable="@drawable/ic_dropdown">

            <AutoCompleteTextView
                android:id="@+id/actv_weapon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownVerticalOffset="@dimen/_3sdp"
                android:gravity="center"
                android:hint="@string/weapon"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_volume"
            style="@style/Theme.Water.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/volume"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_goal"
            style="@style/Theme.Water.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/goal"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        style="@style/Theme.Water.RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/done"
        app:icon="@drawable/ic_done"
        app:iconPadding="@dimen/_8sdp" />

</LinearLayout>